<resources>
    <string name="app_name">多媒体编程</string>
    <string name="use_video_view">使用VideoView播放视频</string>
    <string name="use_surface_view">使用SurfaceView播放视频</string>
    <string name="use_audio_record">使用AudioRecord录制音频</string>
    <string name="use_audio_track">使用AudioTrack播放音频</string>
    <string name="use_intent">使用Intent拍摄照片/视频</string>
    <string name="use_camera">使用Camera拍摄照片</string>
    <string name="use_media_record">使用Media Record录制视频</string>
    <string name="use_media_effect">使用Effect创建视觉效果</string>

    <string name="start_record_audio">开始录制音频</string>
    <string name="stop_record_audio">停止录制音频</string>

    <string name="start_play_audio">开始播放音频</string>
    <string name="stop_play_audio">停止播放音频</string>

    <string name="media_file_not_found">没有找到多媒体文件</string>

    <string name="start_capture">开始拍摄</string>
    <string name="start_take_picture">开始拍摄照片</string>
    <string name="start_record_media">开始录制视频</string>
    <string name="stop_record_media">停止录制视频</string>

</resources>
